--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@nhost/nextjs": "^2.2.9",
+    "@nhost/react": "^3.11.1",
+    "@nhost/react-apollo": "^18.0.1",
     "graphql": "^16.11.0",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "ui": "git+https://github.com/shadcn/ui.git"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -30,6 +34,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "kanban-board": "^2.4.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
