--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@nhost/nextjs": "^2.2.9",
+    "@nhost/nhost-js": "^3.3.0",
     "@nhost/react": "^3.11.1",
     "@nhost/react-apollo": "^18.0.1",
     "graphql": "^16.11.0",
